# Coq-QECC

./: .gitignore  CoqMakefile.conf  CoqQECC.opam  LICENSE  Makefile  README.md  _CoqProject  dune-project
.github/workflows/: docker-action.yml
barebone/: PauliString.v  dune
mathcomp/: Action.v  Assumption.v  Examples.v  Observable.v  Operations.v  PauliGroup.v  PauliProps.v  QECC.v  Stabilizer.v  WellForm.v  dune
quantumlib-only/: PauliString.v
theoreis_legacy/: Pauli.v
theories/: Action.v  Adaptor.v  Assumption.v  Commutativity.v  Examples.v  ExtraSpecs.v  Observable.v  Operations.v  PauliGroup.v  PauliProps.v  QECC.v  Stabilizer.v  WellForm.v
theories_legacy/: Pauli.v
tools/: count_proof.mjs  run_dev.mjs
